--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,22 @@
 psycopg2-binary
+cachetools==4.2.2
+certifi==2021.5.30
+cffi==1.14.6
+charset-normalizer==2.0.6
+google-api-core==2.0.1
+google-auth==2.1.0
+google-cloud-core==2.0.0
+google-cloud-storage==1.42.2
+google-crc32c==1.1.2
+google-resumable-media==2.0.2
+googleapis-common-protos==1.53.0
+idna==3.2
+protobuf==3.18.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+python-dotenv==0.19.0
+requests==2.26.0
+rsa==4.7.2
+six==1.16.0
+urllib3==1.26.6
