--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,12 +9,15 @@ Flask-Cors==3.0.10
 google-api-core==2.0.1
 google-auth==2.1.0
 google-cloud-core==2.0.0
+google-cloud-secret-manager==2.7.1
 google-cloud-speech==2.8.0
 google-cloud-storage==1.42.2
 google-crc32c==1.1.2
 google-resumable-media==2.0.2
 googleapis-common-protos==1.53.0
+grpc-google-iam-v1==0.12.3
 grpcio==1.40.0
+gunicorn==20.1.0
 idna==3.2
 itsdangerous==2.0.1
 Jinja2==3.0.1
